--- a/src/main/resources/static/frontend/recordNachievement.css
+++ b/src/main/resources/static/frontend/recordNachievement.css
@@ -20,6 +20,7 @@
     justify-items: center;
     align-content: center;
     align-items: center;
+    z-index: 30;
 }
 .parent {
     width: 100%;
